add product api and display products

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,11 @@
 <app-footer></app-footer>
 
 
-
+<!--------------------loading--------------------->
 <ngx-spinner bdColor="rgba(143, 184, 61,1)" size="medium" color="#fff" type="ball-scale-multiple">
     <p style="font-size: 20px; color: white">Loading...</p>
 </ngx-spinner>
+
+
+
+
