--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,13 +1,15 @@
 <!-------------------main home----------------------->
 <section>
 
- <div class="container-fluid"  *ngIf="flag">
+ <div class="container-fluid"  *ngIf="!flag">
         <!-- catigories product -->
     <div class="container my-5">
         <div class="row">
-            <!-- sidebar -->
+             <!-------------------------sidebar------------------------>
             <div class="col-md-3">
                 <div class="sidebar border">
+
+                    <!----------------------CATEGORIES-------------->
                     <div>
                         <h3 class="bg-mainColor text-light text-center  py-2 rounded">CATEGORIES</h3>
                         <ul class="list-unstyled text-center">
@@ -16,7 +18,10 @@
                             <li>Leaves (21)</li>
                         </ul>
                     </div>
+                     <!----------------------CATEGORIES-------------->
 
+
+                    <!--------------------PRICE--------------------->
                     <div>
                         <h3 class="bg-mainColor text-light text-center h5 py-2 rounded">PRICE</h3>
                         <ul class="list-unstyled price pl-4 py-2">
@@ -49,66 +54,69 @@
                             </li>
                         </ul>
                     </div>
+                    <!--------------------end PRICE--------------------->
+
 
                 </div>
-
             </div>
+              <!-------------------------sidebar------------------------>
 
 
-            <!-- products -->
+            <!--------------------------products---------------------->
             <div class="col-md-8 offset-1">
                 <div class="row">
 
 
                     <div class="col-md-12 mb">
                         <div class="d-flex justify-content-between">
-
+                            <!---------------------headers---------------->
                             <div class="">
                                 <h2 class="text-mainColor">All items
                                 </h2>
                             </div>
-
-
-
+                            <!---------------------headers---------------->
+                    
+                            <!------------------------display by time\ price------------->
                             <div class="dropdown">
-                                <button class="btn bg-mainColor text-white dropdown-toggle" type="button" id="triggerId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  newest first
-                </button>
+                                <button class="btn bg-mainColor text-white dropdown-toggle" type="button" id="triggerId"
+                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    newest first
+                                </button>
                                 <div class="dropdown-menu" aria-labelledby="triggerId">
                                     <a class="dropdown-item text-mainColor " href="#">newest first</a>
                                     <a class="dropdown-item text-mainColor " href="#">oldest first</a>
                                     <a class="dropdown-item text-mainColor " href="#">price : low to high</a>
                                     <a class="dropdown-item text-mainColor " href="#">price : high to low</a>
-
+                    
                                 </div>
                             </div>
-
-
-
+                            <!------------------------display by time\ price------------->
+                    
+                    
                         </div>
-
+                    
+                    </div>
+                    
+                    
                     </div>
 
 
-                </div>
-
-
-
-
-                <div class="row">
-                    <div class="col-md-4 ">
+                 <!-------------------------display product---------------->
+                <div class="row mt-3">
+                    <div class="col-md-4 " *ngFor="let item of productList">
 
 
                         <div class="product text-center my-2 border rounded shadow ">
                             <div class="position-relative">
                                 <div>
-                                    <img src="../../../assets/images/feature-4.jpg" class="img-fluid rounded" alt="">
+                                    <img [src]="item.image_path" class="img-fluid rounded" alt="">
                                 </div>
 
                                 <div class="overlay position-absolute w-100 py-2 d-flex justify-content-around">
                                     <div class="px-3 bg-light border rounded">
                                         <span class="">-</span>
                                         <span class="mx-3 ">1</span>
+                                 <!-- <input type="text" name="product_quantity" id="product_quantity_123" class="productquantity" value="1"> -->
                                         <span class="">+</span>
                                     </div>
                                     <i class="fas fa-heart   p-2 border rounded-circle"></i>
@@ -119,8 +127,8 @@
                             </div>
 
                             <div>
-                                <p class="my-2">Crab Pool Security</p>
-                                <h5>$30.00</h5>
+                                <p class="my-2">{{item.en_item_name}}</p>
+                                <h5>{{item.price}}</h5>
                                 <p>Sold by : leen el-khair</p>
 
 
@@ -139,260 +147,7 @@
 
                     </div>
 
-                    <div class="col-md-4 ">
-                        <div class="product text-center my-2 border rounded shadow">
-                            <div class="position-relative">
-                                <div>
-                                    <img src="../../../assets/images/feature-7.jpg" class="img-fluid rounded" alt="">
-                                </div>
-
-                                <div class="overlay position-absolute w-100 py-2 d-flex justify-content-around">
-                                    <div class="px-3 bg-light border  rounded">
-                                        <span class="">-</span>
-                                        <span class="mx-3 ">1</span>
-                                        <span class="">+</span>
-                                    </div>
-                                    <i class="fas fa-heart   p-2 border rounded-circle"></i>
-                                    <i class="fas fa-shopping-cart   p-2 border rounded-circle"></i>
-                                </div>
-                            </div>
-
-                            <div>
-                                <p class="my-2">Crab Pool Security</p>
-                                <h5>$30.00</h5>
-                                <p>Sold by : leen el-khair</p>
-                                <button class="btn bg-mainColor text-white my-2">add to cart</button>
-
-                            </div>
-
-                        </div>
-
-                    </div>
-
-
-
-                    <div class="col-md-4 ">
-                        <div class="product text-center my-2 border rounded shadow">
-                            <div class="position-relative">
-                                <div>
-                                    <img src="../../../assets/images/feature-2.jpg" class="img-fluid rounded" alt="">
-                                </div>
-
-                                <div class="overlay position-absolute w-100 py-2 d-flex justify-content-around">
-                                    <div class="px-3 bg-light border  rounded">
-                                        <span class="">-</span>
-                                        <span class="mx-3 ">1</span>
-                                        <span class="">+</span>
-                                    </div>
-                                    <i class="fas fa-heart   p-2 border rounded-circle"></i>
-                                    <i class="fas fa-shopping-cart   p-2 border rounded-circle"></i>
-                                </div>
-                            </div>
-
-                            <div>
-                                <p class="my-2">Crab Pool Security</p>
-                                <h5>$30.00</h5>
-                                <p>Sold by : leen el-khair</p>
-                                <button class="btn bg-mainColor text-white my-2">add to cart</button>
-                            </div>
-
-                        </div>
-
-                    </div>
-
-                    <div class="col-md-4 ">
-                        <div class="product text-center my-2 border rounded shadow ">
-                            <div class="position-relative">
-                                <div>
-                                    <img src="../../../assets/images/feature-8.jpg" class="img-fluid rounded" alt="">
-                                </div>
-
-                                <div class="overlay position-absolute w-100 py-2 d-flex justify-content-around">
-                                    <div class="px-3 bg-light border  rounded">
-                                        <span class="">-</span>
-                                        <span class="mx-3 ">1</span>
-                                        <span class="">+</span>
-                                    </div>
-                                    <i class="fas fa-heart   p-2 border rounded-circle"></i>
-                                    <i class="fas fa-shopping-cart   p-2 border rounded-circle"></i>
-                                </div>
-                            </div>
-
-                            <div>
-                                <p class="my-2">Crab Pool Security</p>
-                                <h5>$30.00</h5>
-                                <p>Sold by : leen el-khair</p>
-                                <button class="btn bg-mainColor text-white my-2">add to cart</button>
-                            </div>
-
-                        </div>
-
-                    </div>
-
-
-
-
-                    <div class="col-md-4 ">
-                        <div class="product text-center my-2 border rounded shadow">
-                            <div class="position-relative">
-                                <div>
-                                    <img src="../../../assets/images/feature-5.jpg" class="img-fluid rounded" alt="">
-                                </div>
-
-                                <div class="overlay position-absolute w-100 py-2 d-flex justify-content-around">
-                                    <div class="px-3 bg-light border  rounded">
-                                        <span class="">-</span>
-                                        <span class="mx-3 ">1</span>
-                                        <span class="">+</span>
-                                    </div>
-                                    <i class="fas fa-heart   p-2 border rounded-circle"></i>
-                                    <i class="fas fa-shopping-cart   p-2 border rounded-circle"></i>
-                                </div>
-
-
-
-                            </div>
-
-                            <div>
-                                <p class="my-2">Crab Pool Security</p>
-                                <h5>$30.00</h5>
-                                <p>Sold by : leen el-khair</p>
-                                <button class="btn bg-mainColor text-white my-2">add to cart</button>
-                            </div>
-
-                        </div>
-
-                    </div>
-
-
-
-                    <div class="col-md-4 shadow ">
-                        <div class="product text-center my-2 border rounded ">
-                            <div class="position-relative">
-                                <div>
-                                    <img src="../../../assets/images/feature-8.jpg" class="img-fluid rounded" alt="">
-                                </div>
-
-                                <div class="overlay position-absolute w-100 py-2 d-flex justify-content-around">
-                                    <div class="px-3 bg-light border  rounded">
-                                        <span class="">-</span>
-                                        <span class="mx-3 ">1</span>
-                                        <span class="">+</span>
-                                    </div>
-                                    <i class="fas fa-heart   p-2 border rounded-circle"></i>
-                                    <i class="fas fa-shopping-cart   p-2 border rounded-circle"></i>
-                                </div>
-                            </div>
-
-                            <div>
-                                <p class="my-2">Crab Pool Security</p>
-                                <h5>$30.00</h5>
-                                <p>Sold by : leen el-khair</p>
-                                <button class="btn bg-mainColor text-white my-2">add to cart</button>
-                            </div>
-
-                        </div>
-
-                    </div>
-
-
-
-
-
-                    <div class="col-md-4 ">
-                        <div class="product text-center my-2 border rounded shadow">
-                            <div class="position-relative">
-                                <div>
-                                    <img src="../../../assets/images/feature-5.jpg" class="img-fluid rounded" alt="">
-                                </div>
-
-                                <div class="overlay position-absolute w-100 py-2 d-flex justify-content-around">
-                                    <div class="px-3 bg-light border rounded">
-                                        <span class="">-</span>
-                                        <span class="mx-3 ">1</span>
-                                        <span class="">+</span>
-                                    </div>
-                                    <i class="fas fa-heart   p-2 border rounded-circle"></i>
-                                    <i class="fas fa-shopping-cart   p-2 border rounded-circle"></i>
-                                </div>
-
-
-                            </div>
-
-                            <div>
-                                <p class="my-2">Crab Pool Security</p>
-                                <h5>$30.00</h5>
-                                <p>Sold by : leen el-khair</p>
-                                <button class="btn bg-mainColor text-white my-2">add to cart</button>
-                            </div>
-
-                        </div>
-
-                    </div>
-
-                    <div class="col-md-4 ">
-                        <div class="product text-center my-2 border rounded shadow">
-                            <div class="position-relative">
-                                <div>
-                                    <img src="../../../assets/images/feature-3.jpg" class="img-fluid rounded" alt="">
-                                </div>
-
-                                <div class="overlay position-absolute w-100 py-2 d-flex justify-content-around">
-                                    <div class="px-3 bg-light border  rounded">
-                                        <span class="">-</span>
-                                        <span class="mx-3 ">1</span>
-                                        <span class="">+</span>
-                                    </div>
-                                    <i class="fas fa-heart   p-2 border rounded-circle"></i>
-                                    <i class="fas fa-shopping-cart   p-2 border rounded-circle"></i>
-                                </div>
-                            </div>
-
-                            <div>
-                                <p class="my-2">Crab Pool Security</p>
-                                <h5>$30.00</h5>
-                                <p>Sold by : leen el-khair</p>
-                                <button class="btn bg-mainColor text-white my-2">add to cart</button>
-                            </div>
-
-                        </div>
-
-                    </div>
-
-
-
-                    <div class="col-md-4 ">
-                        <div class="product text-center my-2 border rounded shadow ">
-                            <div class="position-relative">
-                                <div>
-                                    <img src="../../../assets/images/feature-8.jpg" class="img-fluid rounded" alt="">
-                                </div>
-
-                                <div class="overlay position-absolute w-100 py-2 d-flex justify-content-around">
-                                    <div class="px-3 bg-light border  rounded">
-                                        <span class="">-</span>
-                                        <span class="mx-3 ">1</span>
-                                        <span class="">+</span>
-                                    </div>
-                                    <i class="fas fa-heart   p-2 border rounded-circle"></i>
-                                    <i class="fas fa-shopping-cart   p-2 border rounded-circle"></i>
-                                </div>
-                            </div>
-
-                            <div>
-                                <p class="my-2">Crab Pool Security</p>
-                                <h5>$30.00</h5>
-                                <p>Sold by : leen el-khair</p>
-                                <button class="btn bg-mainColor text-white my-2">add to cart</button>
-                            </div>
-
-                        </div>
-
-                    </div>
-
-
-
-
+                 
 
 
                 </div>
@@ -404,7 +159,7 @@
     </div>
 
     <!-- pagination -->
-    <div class="container pb-3">
+    <!-- <div class="container pb-3">
         <div class="row">
             <div class="col-md-6 ml-auto">
                 <div class="">
@@ -423,20 +178,15 @@
 
             </div>
         </div>
-    </div>
+    </div> -->
 
  </div>
 
 </section>
 <!-------------------main home----------------------->
-
- 
 <!-----------------confirm info----------------------->
 <section >
-  
-   
-
-  <div  class="container py-5" *ngIf="!flag">
+  <div  class="container py-5" *ngIf="flag">
     <div class="row">
         <div class="col-md-6 mx-auto text-center">
             <div>
