--- a/src/app/shell/footer/footer.component.html
+++ b/src/app/shell/footer/footer.component.html
@@ -81,13 +81,12 @@
 
                     <div>
                         <div class="">
-                            <div class="text-center">
+                            <div class="text-center follow">
                                 <span class="text-mainColor">FOLLOW US :</span>
-                                <i class="fab fa-facebook-f border ml-2 rounded-circle p-2"></i>
-                                <i class="fab fa-twitter border ml-2 rounded-circle p-2" aria-hidden="true"></i>
-                                <i class="fab fa-google-plus-g border ml-2 rounded-circle p-2"></i>
-                                <i class="fab fa-linkedin-in border ml-2 rounded-circle p-2"></i>
-                                <i class="fab fa-youtube ml-2 border rounded-circle p-2"></i>
+                               <span class=""> <i class="fab fa-facebook-f fa-2x  ml-3"></i></span>
+                                <span> <i class="fab fa-twitter fa-2x  ml-3"></i></span>
+                                <span><i class="fab fa-google-plus-g  fa-2x  ml-3"></i></span>
+                                <span><i class="fab fa-youtube fa-2x  ml-3"></i></span>
                             </div>
                         </div>
                     </div>
