--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -115,8 +115,8 @@
                                 <div class="overlay position-absolute w-100 py-2 d-flex justify-content-around">
                                     <div class="px-3 bg-light border rounded">
                                         <span class="">-</span>
-                                        <span class="mx-3 ">1</span>
-                                 <!-- <input type="text" name="product_quantity" id="product_quantity_123" class="productquantity" value="1"> -->
+                                        <!-- <span class="mx-3 ">1</span> -->
+                                     <input type="text"  class="productquantity" value="1"> 
                                         <span class="">+</span>
                                     </div>
                                     <i class="fas fa-heart   p-2 border rounded-circle"></i>
