--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -104,13 +104,11 @@
                     <div class="row mt-3">
                         <div class="col-md-4 " *ngFor="let item of productList">
 
-
                             <div class="product text-center my-2 border rounded shadow ">
                                 <div class="position-relative">
                                     <div>
                                         <img [src]="item.image_path" class="img-fluid rounded" alt="">
                                     </div>
-
                                     <div class="overlay position-absolute w-100 py-2 d-flex justify-content-around">
                                         <div class="px-3 bg-light border rounded">
                                             <span class="">-</span>
@@ -121,43 +119,25 @@
                                         <i class="fas fa-heart   p-2 border rounded-circle"></i>
                                         <i class="fas fa-shopping-cart  p-2 border rounded-circle"></i>
                                     </div>
-
-
                                 </div>
-
                                 <div>
                                     <p class="my-2">{{item.en_item_name}}</p>
                                     <h5>{{item.price}}</h5>
                                     <p>Sold by : leen el-khair</p>
-
-
                                     <button class="btn bg-mainColor text-white my-2" (click)=" addToCart()">add to cart</button>
-
-
-
-
-
                                 </div>
-
-
-
-
                             </div>
-
                         </div>
+                    </div>
 
-
-
-
+                    <div class="row justify-content-center">
+                        <div class="col-md-4" *ngIf="disableLoadMore">
+                            <button type="button" class="btn btn-lg  bg-mainColor text-white my-2" (click)="loadMore()"> load More <span> <i class="fas fa-spinner"></i></span></button>
+                        </div>
                     </div>
                 </div>
-
             </div>
-
-
         </div>
-
-
     </div>
 
 </section>
