--- a/src/app/pages/cart/cart.component.html
+++ b/src/app/pages/cart/cart.component.html
@@ -78,7 +78,7 @@
                         <thead>
                             <tr>
 
-                                <th scope="col">dedcription</th>
+                                <th scope="col">description</th>
                                 <th scope="col">amount</th>
 
                             </tr>
