--- a/src/app/shell/footer/footer.component.html
+++ b/src/app/shell/footer/footer.component.html
@@ -53,9 +53,7 @@
                             <li class="mt-2">
                                 <i class="fas fa-chevron-right"></i>
                                 Contact Us</li>
-                            <li class="mt-2">
-                                <i class="fas fa-chevron-right"></i>
-                                Suppliers</li>
+                            
                         </ul>
                     </div>
 
@@ -82,11 +80,11 @@
                     <div>
                         <div class="">
                             <div class="text-center follow">
-                                <span class="text-mainColor">FOLLOW US :</span>
-                               <span class=""> <i class="fab fa-facebook-f fa-2x  ml-3"></i></span>
-                                <span> <i class="fab fa-twitter fa-2x  ml-3"></i></span>
-                                <span><i class="fab fa-google-plus-g  fa-2x  ml-3"></i></span>
-                                <span><i class="fab fa-youtube fa-2x  ml-3"></i></span>
+                                <span class="text-mainColor header">FOLLOW US :</span>
+                               <span class=""> <i class="fab fa-facebook-f fa-2x  ml-4"></i></span>
+                                <span> <i class="fab fa-twitter fa-2x  ml-4"></i></span>
+                                <span><i class="fab fa-google-plus-g  fa-2x  ml-4"></i></span>
+                                <span><i class="fab fa-youtube fa-2x  ml-4"></i></span>
                             </div>
                         </div>
                     </div>
