--- a/src/app/shell/footer/footer.component.scss
+++ b/src/app/shell/footer/footer.component.scss
@@ -40,6 +40,10 @@ footer .footer-content{
 .follow i{
     filter: drop-shadow(2px 4px 6px black);
 }
+.follow .header{
+    font-size: 25px;
+    font-weight: bold;
+}
 
 
 
